--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>Posts</h1>
+    <button id="render-posts" type="button">
+        Click me
+    </button>
     <div id="list-posts">
 
     </div>
